traefik/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: just-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # ingress.kubernetes.io/auth-type: basic
    # ingress.kubernetes.io/auth-secret: secretisthesecret
    # ingress.kubernetes.io/auth-remove-header: true
    # ingress.kubernetes.io/auth-header-field: X-WebAuth-User
    # kubernetes.io/ingress.global-static-ip-name: "ingress"
    # traefik.frontend.rule.type: PathPrefixStrip
    # traefik.ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  # - host: jupyter.ddns.net it seems that this rule works only with GCP DNS
  - http:
      paths:
      - path: /dashboard
        backend:
          serviceName: traefik-web-ui
          servicePort: dashboard-port
      - path: /jupyterx
        backend:
          serviceName: jupyter-service
          servicePort: jupyterx
---



# spec:
#   rules:
#   - http:
#       paths:
#       - path: /testpath
#         backend:
#           serviceName: test
#           servicePort: 80
